# edo_analyzer

./: .gitignore  build_app.spec  edo_analyzer.py  pyproject.toml
analysis/: __init__.py  configuration.py  constants.py  data.py  extractionfuncs.py  plotting.py  tk_objects.py
scripts/: make_installer.py
