[tool.poetry]
name = "edo_analyzer"
version = "0.1.0"
description = ""
authors = ["plge <gplijter@umaco.nl>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.10"
numpy = "~1.23.3"
pandas = "~1.4.4"
pyarrow = "^12.0.1"
matplotlib = "^3.7.2"
pyinstaller = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
